# unified-inventory-service-provider-plugins

./: .gitignore  README.md
amazon/aws/: __init__.py  bindep.txt  manifest.yml  provider.py  pyproject.toml  requirements.txt  requirements.yml
amazon/aws/meta/: execution-environment.yml  runtime.yml
vmware/vcenter/: README.md  __init__.py  bindep.txt  install.sh  manifest.yml  provider.py  pyproject.toml  requirements.txt  requirements.yml
vmware/vcenter/meta/: execution-environment.yml  runtime.yml
