[project]
name = "inventory-provider-vmware-vcenter"
version = "0.2.0"
description = "VMware vSphere (vCenter) inventory collection provider plugin"
requires-python = ">=3.11"
license = {text = "Apache-2.0"}
dependencies = [
    "pyvmomi>=8.0",
]

[project.entry-points."inventory_providers"]
vmware_vcenter = "inventory_provider_vmware_vcenter.provider:VMwareVSphereProvider"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["inventory_provider_vmware_vcenter"]
package-dir = {"inventory_provider_vmware_vcenter" = "."}
